# IVIM_fit

./: .gitignore  404.html  LICENSE  README.md  conf.py  index.html  mkdocs.yml  pyproject.toml  setup_env.sh
.github/: ISSUE_TEMPLATE.md  auto_assign.yml  release-drafter.yml
.github/workflows/: assign_reviewers.yml  ci.yml  deploy_docker.yml  release.yml  test.yml
docs/: index.md
docs/getting_started/: installation.md
docs/usage/: app_cli.md
getting_started/installation/: index.html
ivim_fit/: pipeline_description.json  run.py
ivim_fit/config/: snakebids.yml
ivim_fit/workflow/: Snakefile
ivim_fit/workflow/lib/: check_subj_dwi_metadata.py
ivim_fit/workflow/resources/: synthseg_cortparc_labels.tsv
ivim_fit/workflow/rules/: anatomical.smk  setup.smk
ivim_fit/workflow/rules/diffusion/: diffusion.smk  eddy.smk  fitting.smk  masking_b0_synthstrip.smk  method_grabber.smk  motioncorr.smk  prepdwi.smk  reg_dwi_to_t1.smk  synthsr.smk  topup.smk
ivim_fit/workflow/schemas/: config.schema.yml  participants.schema.yml
ivim_fit/workflow/scripts/fitting/: avg_dwi.py  avg_n_fit.py  concat_fitted.py  fit.py  mean_fitted.py  mean_fitted_loop.py  transform.sh
ivim_fit/workflow/scripts/metadata/: check_subj_dwi_metadata.py  create_missing_subj_tsv.py
search/: search_index.json
usage/app_cli/: index.html
usage/snakemake_cli/: index.html
