[tool.poetry]
name = "IVIM_fit"
version = "0.1.0"
description = "Preprocessing diffusion MRI data and fitting IVIM models"
readme = "README.md"
authors = [
    "Dimuthu <dimuthu@stanford.edu>",
    "Eric Peterson <etpeters@stanford.edu>"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
snakemake = ">=7.20,<8"
snakebids = ">=0.10.2"
pulp = "<2.8.0"
pandas = [
    { version = "<=2.0.3", python = "<3.9" },
    { version = ">=2.1.1", python = ">=3.12" },
]
dipy = "^1.8.0"

[tool.poetry.scripts]
ivim_fit = "ivim_fit.run:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
